--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Final Project"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -74,6 +74,8 @@ ggplot(NFLarrests, aes(x = arrests, fill = home_team)) +
 NFLarrests <- NFLarrests %>%
   mutate(margin_of_vic = abs(margin_of_vic))
 
+#Looking at the home_team vs. arrests chart, the NY Giants, NY Jets, Oakland (now Las Vegas) Raiders, and Pittsburgh Steelers all have floor numbers of arrests that are greater than zero, so we are going to isolate each team's home game data to see their individual margin of victory versus arrest relationships.
+
 OakArrests <- NFLarrests %>%
   filter(home_team == "Oakland")
 
@@ -89,4 +91,40 @@ PitArrests <- NFLarrests %>%
 ggplot(PitArrests, aes(y = arrests, x = margin_of_vic)) +
     geom_point(alpha = 0.5)
 
+NYGiants_arrests <- NFLarrests %>%
+  filter(home_team == "New York Giants")
+head(NYGiants_arrests)
+
+ggplot(NYGiants_arrests, aes(y = arrests, x = margin_of_vic)) +
+    geom_point(alpha = 0.5)
+#Created a visualization of this team's margin_of_vic versus arrest relationship, which will be used while creating a linear regression
+
+Giants_model <- lm(arrests ~ margin_of_vic, data = NYGiants_arrests)
+summary(Giants_model)
+
+confint(Giants_model)
+#The 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Giants home games is [-0.7601545, -0.04792955]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between -0.7601545 and -0.04792955. 
+
+ggplot(NYGiants_arrests, aes(x = margin_of_vic, y = arrests)) + 
+    geom_point() +
+    geom_abline(slope = -0.4040, intercept = 26.6669, color = "red")
+#This provides a linear regression model that demonstrates the relationship between the margin of victory and the number of arrests at NY Giants home games. 
+
+NYJets_arrests <- NFLarrests %>%
+  filter(home_team == "New York Jets")
+head(NYJets_arrests)
+
+ggplot(NYJets_arrests, aes(y = arrests, x = margin_of_vic)) +
+    geom_point(alpha = 0.5)
+#Created a visualization of this team's margin_of_vic versus arrest relationship, which will be used while creating a linear regression
+
+Jets_model <- lm(arrests ~ margin_of_vic, data = NYJets_arrests)
+summary(Jets_model)
+
+confint(Jets_model)
+#The 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Jets home games is [-0.2611174, 0.3649023]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between these two values. 
+
+ggplot(NYGiants_arrests, aes(x = margin_of_vic, y = arrests)) + 
+    geom_point() +
+    geom_abline(slope = 0.05189, intercept = 20.79486, color = "red")
 ```
