--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -61,7 +61,7 @@ ggplot(NFLarrests, aes(y = arrests, x = day_of_week, color = home_team)) +
 #Plot the day of the week against the arrests with different colors for the home team
 
 ggplot(NFLarrests, aes(y = arrests, x = gametime_local, color = home_team)) +
-  geom_point(alpha = 0.5)
+  geom_point(alpha = 0.5) + theme(axis.text.x = element_text(angle = 60, hjust = 1))
 #Plots the arrests for each of the local game times, differentiated by home team.
 
 ggplot(NFLarrests, aes(x = arrests, fill = division_game)) +
@@ -92,8 +92,12 @@ model_nfl <- lm(arrests ~ abs_margin_of_vic, data = NFLarrests)
 summary(model_nfl)
 confint(model_nfl)
 
-#using the overall nfl arrest data, we are more than 95% confident that there is a slight negative correlation between the margin of victory in an NFL game and the arrests during the game. However, by looking at the chart above, it is unclear if this is biased by outliers like New York or if it holds for all teams.
 
+
+#using the overall nfl arrest data, we are more than 95% confident that there is a slight negative correlation between the margin of victory in an NFL game and the arrests during the game. However, by looking at the chart above, it is unclear if this is biased by outliers like New York or if it holds for all teams.
+ggplot(NFLarrests,
+       aes(y = arrests, x = abs_margin_of_vic, color = margin_of_vic > 0)) +
+  geom_point(alpha = 0.5) + geom_abline(slope = -.05437, intercept = 7.21037, color = "red")
 
 #Looking at the home_team vs. arrests chart, the NY Giants, NY Jets, Oakland (now Las Vegas) Raiders, and Pittsburgh Steelers all have floor numbers of arrests that are greater than zero, so we are going to isolate each team's home game data to see their individual margin of victory versus arrest relationships.
 
@@ -174,4 +178,20 @@ head(OTGames_arrests)
 
 ggplot(OTGames_arrests, aes(x = margin_of_vic, y = arrests)) +
   geom_point()
+
+
+
+dangerZone <- NFLarrests %>%
+  filter(home_team == "Oakland" | home_team ==  "Pittsburgh" | home_team == "New York Giants" | home_team == "New York Jets")
+
+t.test(x=dangerZone$arrests, mu=6.566)
+#Here we can see that there is a significant difference between the mean number of arrests at Oakland, Pittsburgh, New York Giants, and New York Jets games and the mean number of arrests at NFL games. This indicates to us that these games are more dangerous than the others.
+
+low_mov <- NFLarrests %>%
+  filter(margin_of_vic <= 7)
+high_mov <- NFLarrests %>%
+  filter(margin_of_vic > 7)
+var.test(low_mov$arrests, high_mov$arrests)
+
+
 ```
