--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -1,19 +1,20 @@
 ---
-title: "Final Project"
-output:
-  html_document: default
-  pdf_document: default
+title: "NFL Stadium Arrests Analysis"
+author: "Fill in"
+date: "12/9/2020"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-  The data we are working with for this project examines public records that report the number of arrests that took place during the years 2011 to 2015 at National Football League stadiums. There are 5 numerical variables (season, week_number, home_score, away_score, arrests) and 6 categorical variables (day_of_week, gametime_local, home_team, away_team, OT_flag, division_game). We will examine the relationship between the game times, outcomes, and time of year of an NFL game all relative to the number of arrests at the stadium during the game. First sift through the data to find any possible confounding variables. Our hypothesis is there is a positive correlation between tightly contested games such as in-division, close margin of victory, or overtime contests. To test this hypothesis, we will graph arrests vs margin of victory for the whole NFL and then zoom in on certain teams, to show that there is typically a negative correlation.
+# Introduction
+The data we are working with for this project examines public records that report the number of arrests that took place during the years 2011 to 2015 at National Football League stadiums. There are 5 numerical variables (season, week_number, home_score, away_score, arrests) and 6 categorical variables (day_of_week, gametime_local, home_team, away_team, OT_flag, division_game). We will examine the relationship between the game times, outcomes, and time of year of an NFL game all relative to the number of arrests at the stadium during the game. First sift through the data to find any possible confounding variables. Our hypothesis is there is a positive correlation between tightly contested games such as in-division, close margin of victory, or overtime contests. To test this hypothesis, we will graph arrests vs margin of victory for the whole NFL and then zoom in on certain teams, to show that there is typically a negative correlation.
+  
   Our project could provide valuable insight into the public safety ramifications of attending an NFL game. While we hope to show that there is a relationship between the margin of victory and the safety of the game, this project could also open the doors to others who wish to investigate the root of this relationship. 
 
+# Data analysis
 ```{r}
-
 library(ggplot2)
 library(dplyr)
 library(broom)
@@ -25,173 +26,263 @@ dim(arrests)
 
 NFLarrests <- arrests %>%
   mutate(margin_of_vic = home_score - away_score)
-#create new variables that quantifies how close a game was. This is in hopes to see some sort of relationship between more exciting games and more arrests.
 
+```
 
+Here we have created a new variable that quantifies how close the final score of a game was. We hope to see a relationship between games that are closer (typically more exciting) and the number of arrests at the game.
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = season)) +
   geom_point(alpha = 0.5)
-#The number of arrests over time remain relatively constant. This could suggest that stadiums are not doing enough to reduce activity in stadiums.
+```
 
+The number of arrests seems to remain relatively constant across all seasons. This could be indicative of NFL stadiums not attempting to increase the safety of stadiums. A high number of arrests could also mean that the safety is taken more seriously and they are willing to arrest people who are being unsafe.
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = home_team)) +
   geom_point(alpha = 0.5) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
-#This plots the home team versus the number of arrests made. There does appear to be a few stadiums that average more arrests than the others. Of these include both New York stadiums, Oakland, Pittsburgh and San Diego.
 
+```
+
+This plots the home team versus the number of arrests made. There does appear to be a few stadiums that average more arrests than the others. Of these include New York (this holds for both NY teams, so possibly indicative of stadium conditions and not the teams), Oakland, Pittsburgh and San Diego.
+
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = away_team)) +
   geom_point(alpha = 0.5) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
-#The away team was also compared to the number of arrests in order to show that the correlation made between arrests and home team was not random. Because the away team appears to be irrelevant to the number of arrests, we can start to conclude that the number of arrests can partly depend on what stadium we are in.
 
+```
+
+The away team was also compared to the number of arrests in order to show that the correlation made between arrests and home team was not random. Because the away team appears to be irrelevant to the number of arrests, we can start to conclude that the number of arrests can partly depend on what stadium we are in are not the teams playing.
+
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = margin_of_vic, color = home_team)) +
   geom_point(alpha = 0.5)
-#This compares the margin of victory with the home team and then we do the away team below.
 
+```
+
+This compares the margin of victory with the home team. This seems to indicate that the the smaller the margin of victory, the more arrests we see. It also is consistent that we see the teams we noted above as having the most arrests.
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = margin_of_vic, color = away_team)) +
   geom_point(alpha = 0.5)
-#To further visualize the previous suggestions, we compared the margin of victory to arrests while color coordinating teams. While no pattern seemed to emerge for the away teams, the home teams tended to have certain clusters of colors focused at the top.
 
+```
+
+To further visualize the previous suggestions, we compared the margin of victory to arrests while color coordinating away teams. No pattern was seen between away team and number of arrests but we continue to see the trend of a low margin of victory being associated with high arrests.
+
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = margin_of_vic, color = OT_flag)) +
   geom_point(alpha = 0.5)
-#Overtime games typically have much smaller margins of victory. First we need to see how many there are and what the variability in this relationship looks like. 
+```
 
+Overtime games typically have much smaller margins of victory. First we need to see how many there are and what the variability in this relationship looks like. While there are several overtime games that show high arrest numbers, they do not seem more prone to arrests than other games with low margin of victory.
+
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = week_num, color = home_team)) +
   geom_point(alpha = 0.5)
-#Compare the number of arrests to the week number, with colors for the home team.
+```
 
+Here we compare the number of arrests with the week number that the game took place in. No discernible effect by the week number can be seen here although the teams with higher arrests noted before can be distinguished. 
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = day_of_week, color = home_team)) +
   geom_point(alpha = 0.5)
-#Plot the day of the week against the arrests with different colors for the home team
 
+```
+
+Here we have plotted the day of the week the game took place on against arrests. While Sundays appear to have many arrests, most games typically happen on Sundays. It does not appear that the day of the week has a noticeable effect on the number of arrests.
+
+```{r}
 ggplot(NFLarrests, aes(y = arrests, x = gametime_local, color = home_team)) +
   geom_point(alpha = 0.5) + theme(axis.text.x = element_text(angle = 60, hjust = 1))
-#Plots the arrests for each of the local game times, differentiated by home team.
 
+```
+
+When looking at the local game time, it does seem intially like there is a pattern. It appears there are three big spikes in the game times that have more arrests. This is because NFL games are scheduled in EST, and the teams we noted above as higher risk are mostly in EST so their games all align and create these spikes. The dips are teams who are not in EST and also do not have high number of arrests. 
+
+```{r}
 ggplot(NFLarrests, aes(x = arrests, fill = division_game)) +
   geom_histogram()  +
   facet_wrap(~ division_game)
-#plots the arrests vs wether or not it is a division game.
+```
 
-ggplot(NFLarrests, aes(x = arrests, fill = home_team)) +
-  geom_histogram()  +
-  facet_wrap(~ day_of_week)
-#plots the arrests for a home team based on the day of the week
+Here we compare the number of arrests base on if the game was a division game or not. These charts seem to have similar distributions and the main difference is that division games occur at a lower frequency than non division games. 
 
+```{r}
 ggplot(NFLarrests,
        aes(y = arrests, x = margin_of_vic, color = margin_of_vic > 0)) +
   geom_point(alpha = 0.5)
-#This plots the arrests against the margin of victory. It also distinguishes between colors such that home teams lost where the dots are red and won when dots are blue. Based of the plot, there seems to be a correlation between arrests and how close the game was as the data points increase towards 0. In addition, the variability of number of arrests seems to increase the closer you get to zero. Further investigation of both the mean and variability at different margin of victories should be done to see if there is a correlation.
 
+```
+
+This plots the arrests against the margin of victory. It also distinguishes between colors such that home teams lost where the dots are red and won when dots are blue. Based of the plot, there seems to be a correlation between arrests and how close the game was as the data points increase towards 0. In addition, the variability of number of arrests seems to increase the closer you get to zero. Further investigation of both the mean and variability at different margin of victories should be done to see if there is a correlation.
+
+```{r}
 NFLarrests <- NFLarrests %>%
   mutate(abs_margin_of_vic = abs(margin_of_vic))
-#this mutation makes sense because the data seems to be centered at the mean. It matters more how close the game is, and not who won.
 
+```
+
+We mutate here to observe the absolute value of the margin of victory. The data seems centered at the mean and we are more interested in how close the game was than who won. 
+
+```{r}
 ggplot(NFLarrests,
        aes(y = arrests, x = abs_margin_of_vic, color = margin_of_vic > 0)) +
   geom_point(alpha = 0.5)
-#this is beared out in this chart.
+```
 
+From visual analysis, it seems that most of the highest arrest games also coincide with the lowest margin of victory games. This could be indicative of a relationship between margin of victory and arrests.
+
+```{r}
 model_nfl <- lm(arrests ~ abs_margin_of_vic, data = NFLarrests)
 summary(model_nfl)
 confint(model_nfl)
+```
 
+Using the overall Nfl arrest data, we are 95% confident that there is a slight negative correlation between the margin of victory in an NFL game and the arrests during the game. However, by looking at the chart above, it is unclear if this is biased by outliers like New York or if it holds for all teams.
 
+```{r}
 
-#using the overall nfl arrest data, we are more than 95% confident that there is a slight negative correlation between the margin of victory in an NFL game and the arrests during the game. However, by looking at the chart above, it is unclear if this is biased by outliers like New York or if it holds for all teams.
 ggplot(NFLarrests,
        aes(y = arrests, x = abs_margin_of_vic, color = margin_of_vic > 0)) +
   geom_point(alpha = 0.5) + geom_abline(slope = -.05437, intercept = 7.21037, color = "red")
+```
 
-#Looking at the home_team vs. arrests chart, the NY Giants, NY Jets, Oakland (now Las Vegas) Raiders, and Pittsburgh Steelers all have floor numbers of arrests that are greater than zero, so we are going to isolate each team's home game data to see their individual margin of victory versus arrest relationships.
+Looking at the home_team vs. arrests chart, the NY Giants, NY Jets, Oakland (now Las Vegas) Raiders, and Pittsburgh Steelers all have floor numbers of arrests that are greater than zero, so we are going to isolate each team's home game data to see their individual margin of victory versus arrest relationships.
 
+```{r}
 NFLarrests <- NFLarrests %>%
   mutate(margin_of_vic = abs(margin_of_vic))
 
+```
+
+Here we change the variable margin of victory into it's absolute value form. This was done because we wanted to create a linear model of all positive values. It doesn't jeopardize the data because the purpose is to examine how close games affect the number of arrests. In other words, if people in a more excited state tend to be arrested more.
+
+```{r}
 OakArrests <- NFLarrests %>%
   filter(home_team == "Oakland")
+```
 
+Here we have filtered the data to just games that occured in Oakland.
+
+```{r}
 model_oak <- lm(arrests ~ margin_of_vic, data = OakArrests)
 summary(model_oak)
 confint(model_oak)
-#The 95% confidence interval for the Oakland Raiders is [-0.4595502  0.2598422] This means we are less than 97.5 percent confident that there is a negative relationship.
+```
 
+From the summary, we extract the values of the slope and interval, in order to create a best fit line. In addition, the 95% confidence interval for the Oakland Raiders is [-0.4595502  0.2598422]. Because this interval contains positive and negative values, we can not establish a relatively confident relationship between the values.
+
+```{r}
 ggplot(OakArrests, aes(y = arrests, x = abs_margin_of_vic)) +
   geom_point() +
   geom_abline(slope = -0.09985,
               intercept = 18.87948,
               color = "red")
+```
 
-#Created a visualization of this team's margin_of_vic versus arrest relationship, which will be used while creating a linear regression
+There is no signifigant trend between the absolute margin of victory and arrests in Oakland.
 
+```{r}
 PittArrests <- NFLarrests %>%
   filter(home_team == "Pittsburgh")
+```
 
+Here we have filtered the data to just games that occured in Pittsburgh.
+
+```{r}
 ggplot(PittArrests, aes(y = arrests, x = margin_of_vic)) +
   geom_point() +
   geom_abline(slope = -0.1948,
               intercept = 18.9663,
               color = "red")
-
 model_pitt <- lm(arrests ~ margin_of_vic, data = PittArrests)
 summary(model_pitt)
 confint(model_pitt)
-#The 95% confidence interval for the Pittsburg Steelers is [-0.6806636  0.2909916] This means we are less than 97.5 percent confident that there is a negative relationship.
+```
 
+The 95% confidence interval for the Pittsburg Steelers is [-0.6806636  0.2909916] Because this interval contains positive and negative values, we can not establish a relatively confident relationship between the values.
+Created a visualization of this team's margin of victory versus arrest relationship.
 
-
-#Created a visualization of this team's margin_of_vic versus arrest relationship
-
+```{r}
 NYGiants_arrests <- NFLarrests %>%
   filter(home_team == "New York Giants")
 head(NYGiants_arrests)
+```
 
+Here we have filtered the data to just games that occurred in the New York stadium with the Giants as the home team.
+
+```{r}
 Giants_model <- lm(arrests ~ margin_of_vic, data = NYGiants_arrests)
 summary(Giants_model)
-
 confint(Giants_model)
-#The 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Giants home games is [-0.7601545, -0.04792955]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between -0.7601545 and -0.04792955.
+```
 
+Using a linear regression model, we compared the margin of victory to arrests in the New York Giants data set. From the summary, we can see the residuals, intercepts and slopes that we can use for creating a line that estimates the data. The 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Giants home games is [-0.7601545, -0.04792955]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between -0.7601545 and -0.04792955. The fact that the confidence interval does not contain any positive values means that we can conclude with relative confidence that the greater the margin of victory, the fewer arrests will be made.
+
+```{r}
 ggplot(NYGiants_arrests, aes(x = margin_of_vic, y = arrests, color = OT_flag)) +
   geom_point() +
   geom_abline(slope = -0.4040,
               intercept = 26.6669,
               color = "red")
-#This provides a linear regression model that demonstrates the relationship between the margin of victory and the number of arrests at NY Giants home games.
+```
 
+This provides a linear regression model that shows the general trend between the margin of victory and the number of arrests at NY Giants home games.
+
+```{r}
 NYJets_arrests <- NFLarrests %>%
   filter(home_team == "New York Jets")
 head(NYJets_arrests)
-
 Jets_model <- lm(arrests ~ margin_of_vic, data = NYJets_arrests)
 summary(Jets_model)
-
 confint(Jets_model)
-#The 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Jets home games is [-0.2611174, 0.3649023]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between these two values.
+```
 
+Replicating our work for the New York Giants, we collected the values of residuals, slope and intercepts, and continue by constructing a 95% confidence interval for the slope of the relationship between the margin_of_victory and number of arrests at NY Jets home. This value lies between [-0.2611174, 0.3649023]. This indicates that though we do not know the true correlation coefficient between these two variables, we are 95% confident that the true value lies between these two values.
+
+```{r}
 ggplot(NYJets_arrests, aes(x = margin_of_vic, y = arrests)) +
   geom_point() +
   geom_abline(slope = 0.05189,
               intercept = 20.79486,
               color = "red")
-#Created a visualization of this team's margin_of_vic versus arrest relationship
+```
 
+Here we have created a visualization of the Jet's margin of victory versus arrest relationship.
+
+```{r}
 OTGames_arrests <- NFLarrests %>%
   filter(OT_flag != "")
 head(OTGames_arrests)
+```
 
+Here we filtered the data set to isolated games that went to overtime. 
+
+```{r}
 ggplot(OTGames_arrests, aes(x = margin_of_vic, y = arrests)) +
   geom_point()
+```
 
+The construction of a plot to visualize the Overtime data. 
 
-
+```{r}
 dangerZone <- NFLarrests %>%
   filter(home_team == "Oakland" | home_team ==  "Pittsburgh" | home_team == "New York Giants" | home_team == "New York Jets")
-
 t.test(x=dangerZone$arrests, mu=6.566)
-#Here we can see that there is a significant difference between the mean number of arrests at Oakland, Pittsburgh, New York Giants, and New York Jets games and the mean number of arrests at NFL games. This indicates to us that these games are more dangerous than the others.
+```
 
+In this filtered data set, we selected a few stadiums that appeared to have statistically high arrest values compared to the rest of the NFL. We subsequently took a t-test with 156 degrees of freedom to examine whether the mean of this data set was higher, and thus quantify whether certain stadiums were more prone to arrests. Here we can see that there is a significant difference between the mean number of arrests at Oakland, Pittsburgh, New York Giants, and New York Jets games over the mean number of arrests at NFL games. This indicates to us that these games are more dangerous than the others.
+
+```{r}
 low_mov <- NFLarrests %>%
   filter(margin_of_vic <= 7)
 high_mov <- NFLarrests %>%
   filter(margin_of_vic > 7)
 var.test(low_mov$arrests, high_mov$arrests)
-
-
 ```
+
+After the initial examination their appeared to be a higher variance in the number of arrests when the margin of victory approached zero. In order to examine the significance, the data set was filtered into to two separate data sets. One where the margin of victory was less than or equal 7, and another that was greater than 7(value of a touchdown).We then conducted an F-statistic test between the corresponding variances. Our 95% confidence interval gave us a ratio of variance between [1.023641, 1.464969] with a ratio of variances 1.223859. Because our smaller margin of victories was in the numerator, this ratio does in fact reaffirm our prediction that the variance is greater in lower margin of victoriy games.
+
+# Conclusion
+  When examining the data, we found less trends than we initially expected. It seems most teams had a relatively low amount of arrests. The most significant trend we found was a slight negative correlation between the absolute value of the margin of victory and the number of arrests at the New York Giants home games. Though when comparing the data between the New York Giants and the New York Jets an interesting difference was found. While both of these teams play their home games at MetLife Stadium, the Giants experienced more arrests with lower margin of victory, yet the Jets did not show the same trend. This could be caused by a number of factors, such as differences in fan base or that the Jets have had significantly less success than the Giants in recent years.  
+  Additionally, when we compared the number of arrests of Oakland, Pittsburgh, and both New York teams to the NFL average, they were significantly different. When running a one sample t-test we found a p < 2.2e-16, showing that these cities have higher arrest numbers than the NFL on average.  
+  One final find of ours was the difference in variability in arrests between games with a high margin of victory (>7) and games with a low margin of victory (<=7). A significant difference was found between these two variances, leading us to believe that the crowds at games with low margin of victory are more volatile and possibly more dangerous.  
+  In totality, NFL stadiums appear to be relatively safe and the fact that they are making arrests, suggests that teams do have interest in public safety. Future research could look into the relationship between the success of a team and the number of arrests or possibly explore more data from the cities in which these teams are located. 
+	
